# gdf-ai

./: README.md  pyproject.toml
src/: field.pkl  field.vtu  machine_learning.py  main.py  plot_field.py  random_field_generator.py
